--- a/style.css
+++ b/style.css
@@ -1,6 +1,63 @@
 table{
     border: 2px solid red;
+    margin-top: 50px;
 }
 th,td{
     border:1px solid royalblue;
+    padding: 20px;
+}
+header img{
+    width: 100px;
+    height: 50px;
+    margin-left: 30px;
+    margin-top: 20px;
+
+}
+header h1{
+    font-size: 100px;
+    text-align: center;
+    margin-top: 5px;
+    position: relative;
+}
+header dl{
+margin-left: 1700px;
+margin-top: 0px;
+}
+header a{
+margin-left: 1750px;
+margin-top: 20px;
+font-size: 30px;
+}
+header{
+background-color: sienna;
+color: silver;
+}
+header dl dt{
+    font-size: 30px;
+}
+header dl dt dd{
+    font-size: 40px;
+    color: aliceblue;
+}
+main p{
+    font-size: 30px;
+    font-style: italic;
+    width: 95%;
+}
+div img{
+width: 1850px;    
+}
+fieldset{
+    padding: 50px;
+    padding-top: 70px;
+}
+label{
+    font-size: 30px;
+}
+input{
+    padding: 10px;
+    margin-left: 15pxpx;
+}
+legend{
+    font-size: 40px;
 }
